# mocap_kalman

./: CMakeLists.txt  nodelet_plugins.xml  package.xml
include/mocap_kalman/: mocap_kalman.hpp
src/: mocap_kalman.cpp
